Fix: Content-Extraktion auf JSoup umgestellt
- JSoup statt Java HttpClient für HTTP-Requests
- Automatische GZip/Deflate-Dekomprimierung durch JSoup
- Entfernt Accept-Encoding Header-Handling
- Bessere Timeout- und Redirect-Handling